# openairinterface5g

./: .dockerignore  CMakeLists.txt  README.md
ci-scripts/: Jenkinsfile  Jenkinsfile-GitLab-Container  args_parse.py  ci_infra.yaml  cls_analysis.py  cls_containerize.py  cls_loganalysis.py  cls_oai_html.py  cls_oaicitest.py  cls_static_code_analysis.py  datalog_rt_stats.100.4x4.fhi72.yaml  datalog_rt_stats.default.yaml  main.py  ran.py  run_locally.sh  xml_class_list.yml
cmake_targets/: build_oai  macros.cmake
common/: CMakeLists.txt  cmake_defs.h.in
common/utils/ds/tests/: CMakeLists.txt
doc/: Aerial_FAPI_Split_Tutorial.md  Doxyfile  ORAN_FHI7.2_Tutorial.md  README.md  RUNMODEM.md  TESTBenches.md  analog_beamforming.md  cross-compile.md  handover-tutorial.md
docker/: Dockerfile.base.rhel9  Dockerfile.base.ubuntu  Dockerfile.base.ubuntu.cross-arm64  Dockerfile.build.fhi72.native_arm.ubuntu  Dockerfile.build.fhi72.ubuntu  Dockerfile.build.ubuntu  Dockerfile.eNB.rhel9  Dockerfile.eNB.ubuntu  Dockerfile.gNB.aerial.ubuntu  Dockerfile.gNB.aerial.ubuntu.sanitize-address  Dockerfile.gNB.aw2s.rhel9  Dockerfile.gNB.aw2s.ubuntu  Dockerfile.gNB.fhi72.rhel9  Dockerfile.gNB.fhi72.rocky  Dockerfile.gNB.fhi72.ubuntu  Dockerfile.gNB.rhel9  Dockerfile.gNB.ubuntu  Dockerfile.lteRU.rhel9  Dockerfile.lteRU.ubuntu  Dockerfile.lteUE.rhel9  Dockerfile.lteUE.rocky  Dockerfile.lteUE.ubuntu  Dockerfile.nr-cuup.rhel9  Dockerfile.nr-cuup.ubuntu  Dockerfile.nrORU.fhi72.ubuntu  Dockerfile.nrUE.rhel9  Dockerfile.nrUE.ubuntu  Dockerfile.phySim.rhel9
executables/: CMakeLists.txt  lte-ue.c  (+15 more)
(+561 files in other folders)
